# VulkanVoxels

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  gcovr.cfg  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  fdd-feature.md  improvement-task.md  job-story.md  problem-story.md
.github/workflows/: build-and-test.yml  ci.yml  feature-branch-quick-check.yml  format-lint.yml
cmake/: CodeCoverage.cmake  CompileShaders.cmake  CompilerWarnings.cmake  DefaultProjectSettings.cmake
resources/shaders/: simpleVert.slang
resources/shaders/glsl/: pbrFrag.frag  pbrVert.vert  pointLightFrag.frag  pointLightVert.vert  simpleFrag.frag  simpleVert.vert
resources/shaders/slang/: pbrFrag.slang  pbrVert.slang  pointLightFrag.slang  pointLightVert.slang  simpleFrag.slang  simpleVert.slang
resources/textures/Titanium-Scuffed-bl/: README.md
resources/textures/brickwall/: Poliigon_BrickWallReclaimed_8320.mtlx
resources/textures/damascus-steel-bl/: README.md
resources/textures/redbrick/: README.md
resources/textures/rough-brick-bl/: README.md
resources/textures/rustediron1-alt2-bl/: README.md
resources/textures/worn-shiny-metal-bl/: README.md
scripts/: buildShadersGLSL.py  buildShadersSlang.py  codeCoverage  format  packTexture.py
src/app/: CMakeLists.txt  main.cpp
src/engine/: Application.cpp  Application.hpp  BasicRenderSystem.cpp  BasicRenderSystem.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  MagnetPhysicsSystem.hpp  Model.cpp  Model.hpp  Object.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp  Window.cpp  Window.hpp
src/engine/core/: Buffer.cpp  Buffer.hpp  ComputePipeline.cpp  ComputePipeline.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorWriter.cpp  DescriptorWriter.hpp  Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  IPipeline.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp  Texture2D.cpp  Texture2D.hpp  Window.cpp  Window.hpp
src/engine/renderSystems/: BasicRenderSystem.cpp  BasicRenderSystem.hpp  IRenderSystem.cpp  IRenderSystem.hpp  PBRRenderSystem.cpp  PBRRenderSystem.hpp  PointLightRenderSystem.cpp  PointLightRenderSystem.hpp  VoxelRenderSystem.cpp  VoxelRenderSystem.hpp
src/engine/utility/: Camera.cpp  Camera.hpp  FileIO.hpp  FrameInfo.hpp  GLFWInputHandler.hpp  IInputHandler.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Utils.hpp
src/engine/utility/exceptions/: Exception.cpp  Exception.hpp  FileException.cpp  FileException.hpp  ResourceException.cpp  ResourceException.hpp  VulkanException.cpp  VulkanException.hpp
src/engine/utility/material/: DefaultTextureProvider.hpp  Material.cpp  Material.hpp  MaterialAlphaMode.hpp  MaterialBuilder.cpp  MaterialBuilder.hpp
src/engine/utility/object/: IdPool.hpp  Object.cpp  Object.hpp  ObjectBuilder.cpp  ObjectBuilder.hpp
src/engine/utility/object/components/: ColorComponent.hpp  Component.hpp  MaterialComponent.hpp  ModelComponent.hpp  PointLightComponent.hpp  TransformComponent.hpp
tests/: CMakeLists.txt  main.cpp
tests/core/: BufferTest.cpp  Texture2DTest.cpp  TextureTest.cpp
tests/fixtures/: TestVulkanContext.hpp
tests/helper/: BufferTestHelper.hpp  RandomNumberGenerator.hpp
tests/mocks/: MockInputHandler.cpp  MockInputHandler.hpp
tests/utility/: CameraTest.cpp  KeyboardMovementControllerTest.cpp  ModelTest.cpp  ObjectTest.cpp  TransformTest.cpp  UtilsTest.cpp  VertexTest.cpp
tests/utility/exceptions/: ExceptionTest.cpp
